--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 title: Tony's Technical Notes
 description: Some notes from some technical courses/textbooks/materials...
-github_username: lockbrains
+github_username: Lockbrains
 
 # Email and twitter are optional:
 email: lockbrains@gmail.com
