--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Tony's Technical Notes 陶蛋的理工笔记本
+title: 陶蛋的理工笔记本
 description: Some notes from some technical courses/textbooks/materials...
 github_username: Lockbrains
 
