--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ use_math: true
 google_analytics:
 
 # Everything below here can be ignored, unless you want to change the theme entirely
-theme: cayman
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
   - jekyll-gist
   - jekyll-octicons
