--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,9 @@ use_math: true
 google_analytics:
 
 # Everything below here can be ignored, unless you want to change the theme entirely
-theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-  - jekyll-feed
-  - jekyll-gist
-  - jekyll-octicons
-  - jekyll-github-metadata
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 titles_from_headings:
   enabled:     true
