--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ titles_from_headings:
 highlighter: rouge
 markdown: kramdown
 kramdown:
-  math_engine: katex
+  math_engine: MathJax
   input: GFM
   auto_ids: true
   hard_wrap: false
