--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ titles_from_headings:
 highlighter: rouge
 markdown: kramdown
 kramdown:
+  math engine: katex
   input: GFM
   auto_ids: true
   hard_wrap: false
